--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -25,10 +25,14 @@ code {
   width: 400px;
 }
 
+.App .question-container .input-grp {
+  margin-bottom: 5px;
+}
+
 .App .question-container .options-text {
- font-size: 15px;
- text-align: left;
- font-weight: bold;
- margin-left: 5px;
- margin-bottom: 5px;
+  font-size: 15px;
+  text-align: left;
+  font-weight: bold;
+  margin-left: 5px;
+  margin-bottom: 5px;
 }
